tests/samples/compile_errors/set_vs_let/set_on_scalar.bas
Attribute VB_Name = "SetOnScalar"
Sub TestSet()
    Dim s As String
    Set s = "hello" ' Set used on String
End Sub
